do not use boolean returns in page objects, use implicit locator waiting